project-auth-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: project-auth
  labels:
    app: project-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-auth
  template:
    metadata:
      labels:
        app: project-auth
    spec:
      containers:
      - name: project-auth
        image: registry.cloud.sdu.dk/sdu-cloud/project-auth-service:0.1.4
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/psql
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/psql
          name: project-auth-psql
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: project-auth-refresh-token
      - name: token-validation
        configMap:
          name: token-validation
      - name: project-auth-psql
        secret:
          optional: false
          secretName: project-auth-psql

      imagePullSecrets:
        - name: esci-docker
